--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>common</artifactId>
 
     <dependencies>
+
+        <!--swagger ui接口文档依赖-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -38,14 +45,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.4.1</version>
-<!--            <scope>provided</scope>-->
         </dependency>
         <!-- velocity -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
             <version>2.0</version>
-<!--            <scope>provided</scope>-->
         </dependency>
         <!-- 代码自动生成依赖 end-->
     </dependencies>
