--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
 
+        <!-- 单元测试-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
         <!--swagger ui接口文档依赖-->
         <dependency>
             <groupId>io.springfox</groupId>
