--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>user-service</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>kaptcha-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.lh</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
