--- a/common/pom.xml
+++ b/common/pom.xml
@@ -19,7 +19,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
-        <!--swagger ui接口文档依赖-->
+        <!--swagger ui接口文档依赖-->∑
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
@@ -59,5 +59,21 @@
             <version>2.0</version>
         </dependency>
         <!-- 代码自动生成依赖 end-->
+
+        <!--redis客户端-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.lettuce</groupId>
+                    <artifactId>lettuce-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
 </project>
