--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -13,6 +13,16 @@ spring:
     host: longsan
     password: 123456
     port: 8000
+  mail:
+    host: smtp.163.com #发送邮件服务器
+    username: pangcihuli@163.com #发送邮件的邮箱地址
+    password: CJVYSJOTRXUSSEJE #客户端授权码，不是邮箱密码,网易的是自己设置的
+    from: pangcihuli@163.com # 发送邮件的地址，和上面username一致
+
+    properties.mail.smtp.starttls.enable: true
+    properties.mail.smtp.starttls.required: true
+    properties.mail.smtp.ssl.enable: true
+    default-encoding: utf-8
 
 #配置plus打印sql日志
 mybatis-plus:
