--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -24,6 +24,15 @@ spring:
     properties.mail.smtp.ssl.enable: true
     default-encoding: utf-8
 
+
+#阿里云OSS配置
+aliyun:
+  oss:
+    endpoint: oss-cn-chengdu.aliyuncs.com
+    access-key-id: LTAIe20PcNuGzmUr
+    access-key-secret: VnpIko7xuGxzQ8fAX3ylxH51J0vtO3
+    bucket_name: lh-1024-shop
+
 #配置plus打印sql日志
 mybatis-plus:
   configuration:
