--- a/common/pom.xml
+++ b/common/pom.xml
@@ -76,5 +76,17 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+        <!-- JWT相关 -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+
     </dependencies>
 </project>
