--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,15 @@
                 <version>3.10.2</version>
             </dependency>
 
+
+            <!-- JWT相关 -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.7.0</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
@@ -160,7 +169,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
