--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             </dependency>
 
 
+            <!--分布式锁-->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>3.10.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
