--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,14 +3,17 @@ server:
 spring:
   application:
     name: user-service
+  cloud: #注册中心地址 nacos:
+    discovery:
+      server-addr: 8.135.107.8:8848
   #数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://longsan:3306/lh_user?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://8.135.107.8:3306/lh_user?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
   redis:
-    host: longsan
+    host: 8.135.107.8
     password: 123456
     port: 8000
   mail:
