--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -21,5 +21,12 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.10.218.ALL</version>
+        </dependency>
     </dependencies>
 </project>
