--- a/coupon-service/src/main/resources/application.yml
+++ b/coupon-service/src/main/resources/application.yml
@@ -1,73 +1,73 @@
-server:
-  port: 9002
-spring:
-  application:
-    name: coupon-service
-  cloud: #注册中心地址
-    nacos:
-      discovery:
-        server-addr: 8.135.107.8:8848
-
-  #消息队列
-  rabbitmq:
-    host: 8.135.107.8
-    port: 5672
-    virtual-host: /
-    password: 123456
-    username: admin
-      #开启手动确认消息
-    listener:
-       simple:
-         acknowledge-mode: manual
-  #数据库配置
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.135.107.8:3306/lh_coupon?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
-  redis:
-    host: 8.135.107.8
-    password: 123456
-    port: 8000
-
-  properties.mail.smtp.starttls.enable: true
-  properties.mail.smtp.starttls.required: true
-  properties.mail.smtp.ssl.enable: true
-  default-encoding: utf-8
-
-#配置plus打印sql日志
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-#设置日志级别,ERROR/WARN/INFO/DEBUG,默认是INFO以上才显示
-logging:
-  level:
-    root: INFO
-#seata配置
-#seata:
-#  tx-service-group: ${spring.application.name}-group
-#  service:
-#    grouplist:
-#      lh: 8.135.107.8:8091
-#    vgroup-mapping:
-#      coupon-service-group: lh
-#自定义消息队列配置，发送锁定库存消息-》延迟exchange-》lock.queue-》死信exchange-》release.queue
-mqconfig:
-  #延迟队列，不能被监听消费
-  coupon_release_delay_queue: coupon.release.delay.queue
-
-  #延迟队列的消息过期后转发的队列
-  coupon_release_queue: coupon.release.queue
-
-  #交换机
-  coupon_event_exchange: coupon.event.exchange
-
-  #进入延迟队列的路由key
-  coupon_release_delay_routing_key: coupon.release.delay.routing.key
-
-  #消息过期，进入释放死信队列的key
-  coupon_release_routing_key: coupon.release.routing.key
-
-  #消息过期时间,毫秒,测试改为15秒
-  ttl: 15000
+#server:
+#  port: 9002
+#spring:
+#  application:
+#    name: coupon-service
+#  cloud: #注册中心地址
+#    nacos:
+#      discovery:
+#        server-addr: 8.135.107.8:8848
+#
+#  #消息队列
+#  rabbitmq:
+#    host: 8.135.107.8
+#    port: 5672
+#    virtual-host: /
+#    password: 123456
+#    username: admin
+#      #开启手动确认消息
+#    listener:
+#       simple:
+#         acknowledge-mode: manual
+#  #数据库配置
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://8.135.107.8:3306/lh_coupon?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: 123456
+#  redis:
+#    host: 8.135.107.8
+#    password: 123456
+#    port: 8000
+#
+#  properties.mail.smtp.starttls.enable: true
+#  properties.mail.smtp.starttls.required: true
+#  properties.mail.smtp.ssl.enable: true
+#  default-encoding: utf-8
+#
+##配置plus打印sql日志
+#mybatis-plus:
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#
+##设置日志级别,ERROR/WARN/INFO/DEBUG,默认是INFO以上才显示
+#logging:
+#  level:
+#    root: INFO
+##seata配置
+##seata:
+##  tx-service-group: ${spring.application.name}-group
+##  service:
+##    grouplist:
+##      lh: 8.135.107.8:8091
+##    vgroup-mapping:
+##      coupon-service-group: lh
+##自定义消息队列配置，发送锁定库存消息-》延迟exchange-》lock.queue-》死信exchange-》release.queue
+#mqconfig:
+#  #延迟队列，不能被监听消费
+#  coupon_release_delay_queue: coupon.release.delay.queue
+#
+#  #延迟队列的消息过期后转发的队列
+#  coupon_release_queue: coupon.release.queue
+#
+#  #交换机
+#  coupon_event_exchange: coupon.event.exchange
+#
+#  #进入延迟队列的路由key
+#  coupon_release_delay_routing_key: coupon.release.delay.routing.key
+#
+#  #消息过期，进入释放死信队列的key
+#  coupon_release_routing_key: coupon.release.routing.key
+#
+#  #消息过期时间,毫秒,测试改为15秒
+#  ttl: 15000
