--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <commons.lang3.version>3.9</commons.lang3.version>
         <commons.codec.version>1.15</commons.codec.version>
         <springfox.boot.starter.version>3.0.0</springfox.boot.starter.version>
-        <docker.image.prefix>xdclass-cloud</docker.image.prefix>
+        <docker.image.prefix>longsan-cloud</docker.image.prefix>
 
         <!--跳过单元测试-->
         <skipTests>true</skipTests>
