--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,66 +1,66 @@
-server:
-  port: 9003
-spring:
-  application:
-    name: product-service
-  cloud: #注册中心地址
-    nacos:
-      discovery:
-        server-addr: 8.135.107.8:8848
-  #消息队列
-  rabbitmq:
-    host: 8.135.107.8
-    port: 5672
-    virtual-host: /
-    password: 123456
-    username: admin
-    #开启手动确认消息
-    listener:
-      simple:
-        acknowledge-mode: manual
-  #数据库配置
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.135.107.8:3306/lh_product?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
-  redis:
-    host: 8.135.107.8
-    password: 123456
-    port: 8000
-
-  properties.mail.smtp.starttls.enable: true
-  properties.mail.smtp.starttls.required: true
-  properties.mail.smtp.ssl.enable: true
-  default-encoding: utf-8
-
-
-
-#配置plus打印sql日志
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-#设置日志级别,ERROR/WARN/INFO/DEBUG,默认是INFO以上才显示
-logging:
-  level:
-    root: INFO
-#自定义消息队列配置，发送锁定库存消息-》延迟exchange-》lock.queue-》死信exchange-》release.queue
-mqconfig:
-  #延迟队列，不能被监听消费
-  stock_release_delay_queue: stock.release.delay.queue
-
-  #延迟队列的消息过期后转发的队列
-  stock_release_queue: stock.release.queue
-
-  #交换机
-  stock_event_exchange: stock.event.exchange
-
-  #进入延迟队列的路由key
-  stock_release_delay_routing_key: stock.release.delay.routing.key
-
-  #消息过期，进入释放队列的key
-  stock_release_routing_key: stock.release.routing.key
-
-  #消息过期时间,毫秒,测试改为15秒
-  ttl: 15000
+#server:
+#  port: 9003
+#spring:
+#  application:
+#    name: product-service
+#  cloud: #注册中心地址
+#    nacos:
+#      discovery:
+#        server-addr: 8.135.107.8:8848
+#  #消息队列
+#  rabbitmq:
+#    host: 8.135.107.8
+#    port: 5672
+#    virtual-host: /
+#    password: 123456
+#    username: admin
+#    #开启手动确认消息
+#    listener:
+#      simple:
+#        acknowledge-mode: manual
+#  #数据库配置
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://8.135.107.8:3306/lh_product?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: 123456
+#  redis:
+#    host: 8.135.107.8
+#    password: 123456
+#    port: 8000
+#
+#  properties.mail.smtp.starttls.enable: true
+#  properties.mail.smtp.starttls.required: true
+#  properties.mail.smtp.ssl.enable: true
+#  default-encoding: utf-8
+#
+#
+#
+##配置plus打印sql日志
+#mybatis-plus:
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#
+##设置日志级别,ERROR/WARN/INFO/DEBUG,默认是INFO以上才显示
+#logging:
+#  level:
+#    root: INFO
+##自定义消息队列配置，发送锁定库存消息-》延迟exchange-》lock.queue-》死信exchange-》release.queue
+#mqconfig:
+#  #延迟队列，不能被监听消费
+#  stock_release_delay_queue: stock.release.delay.queue
+#
+#  #延迟队列的消息过期后转发的队列
+#  stock_release_queue: stock.release.queue
+#
+#  #交换机
+#  stock_event_exchange: stock.event.exchange
+#
+#  #进入延迟队列的路由key
+#  stock_release_delay_routing_key: stock.release.delay.routing.key
+#
+#  #消息过期，进入释放队列的key
+#  stock_release_routing_key: stock.release.routing.key
+#
+#  #消息过期时间,毫秒,测试改为15秒
+#  ttl: 15000
